@@ -1,3 +1,6 @@
+1/23/2003
+	- Add the setMaxCache() method to the Cache class.
+
 1/21/2003
 	- 1.3.2 released.
 
